# creds

./: .gitignore  README.md  install.sh  make-zip.sh  pyproject.toml
creds/: __init__.py  __main__.py  account.py  cli.py  formatting.py  keychain.py  meta.py  migrate.py  registry.py  services.yaml  store.py
creds/tui/: add_dialog.py  app.py  details_panel.py  service_list.py
tests/: test_account.py  test_cli.py  test_keychain.py  test_meta.py  test_migrate.py  test_registry.py  test_store.py
